# non-negative-time-diff

./: .gitignore  README.md  changelog.md  flake.nix  non-negative-time-diff.cabal  non-negative-time-diff.cabal.template
src/Data/Time/Clock/: NonNegativeTimeDiff.hs
